# HorseshoeGibbs

./: .gitignore  README.md  Taskfile.yml  mise.toml  pyproject.toml
notebooks/: duplication.ipynb  experiment.ipynb
src/horseshoe_gibbs/: __init__.py  _sampler_gibbs.py  _sampler_gibbs_improved.py  _sampler_gibbs_job.py  fast_gaussian.py  sampler_gibbs.py  sampler_gibbs_improved.py
