[project]
name = "horseshoe_gibbs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mory22k", email = "mory22k@dc.tohoku.ac.jp" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.2",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.9.3",
]
